@@ -8,9 +8,10 @@
  
 ;;; do not change the defaults ;;; ---
 
-user: applhtb
+user: venkateshk
 temp_path: /tmp
 home_path: /home/%(user)s
+load_path: /home/applhtb
 ;log_path: /var/log/%(user)s/%(user)s.log
 log_path: %(user)s.log
 
@@ -22,7 +23,7 @@ log_path: %(user)s.log
 category: LabResultBulkLoad
 
 ;;; define some paths needed for running bulk loader ;;; ---
-basepath: %(home_path)s/%(category)s
+basepath: %(load_path)s/%(category)s
 libpath: %(basepath)s/lib
 confpath: %(basepath)s/config
 
@@ -52,8 +53,8 @@ spreadsheet_id: 14-qgwW4jGBQgVnoPS_bqXUBSMSmijtLm1_1aM3MrPEk
 
 [create-batch]
 column_range: Sheet1!A1:U1
-column_map: batch|start_date|end_date|succs|fails|procs
-column_updates: Batch ID|Create Batch Date/Time Started|Create Batch Date/Time Completed|Count Successful|Count Failed|Total Processed
+column_map: bluser|batch|start_date|end_date|succs|fails|procs
+column_updates: BulkLoad User|Batch ID|Create Batch Date/Time Started|Create Batch Date/Time Completed|Count Successful|Count Failed|Total Processed
 
 
 [notify]
@@ -62,10 +63,7 @@ account_sid:
 auth_token: 
 
 ;;; your phone number ;;; ---
-phone_number: 
-
-;;; from number - this is the number you got when you signed up on twilio ;;; ---
-twilio_number: 
+phone_number: +18034130392
 
 ;;; notification preferences for incidents ;;; ---
 ;;; choose one of the following: no, yes
